--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,5 +23,8 @@ jobs:
         npm run build --if-present
         npm test
         npm run format
+        git add .
+        git commit -m "Linted Changes"
+        git push
       env:
         CI: true
