--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,15 @@
+name: Ronin-CLI Main
+on: [push]
 
+jobs: 
+  default: 
+    runs-on: ubuntu-latest
+    strategy: 
+      matrix: 
+        node-version: [8.x, 10.x, 12.x]
+    
+    steps: 
+    - name: Test
+      run: |
+        echo "Hello World!"
+    
